// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init-stc (LONG) run setup with defaults 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> Install Zowe main started task
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEGENER)
--- JCL content ---
//ZWEGENER JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is responsible for generating other jobs required
//* to configure Zowe.
//*
//* The method of validating your configuration is using
//* JSON Schema <https://json-schema.org>. Zowe provides
//* the ConfigMgr to assist in this. This job will invoke
//* the ConfigMgr to validate your current configuration
//* before generating any jobs. If there are any values
//* that are incorrect, you will be notified. You should
//* fix the value and then run this job again. You can run
//* this job as many times as you need.
//*
//* Configmgr documentation:
//* https://docs.zowe.org/stable/user-guide/configmgr-using
//*
//* Note: Any string with braces has an associated yaml value
//*       in one of the yaml definitions for Zowe.
//*       You must find the value and substitute it.
//*
//*       {key} -> value
//*
//GENER    EXEC PGM=IKJEFT1B
//ISPPROF  DD   DSN=,DISP=(NEW,DELETE),UNIT=VIO,
//   DCB=(RECFM=FB,LRECL=80,BLKSIZE=3120,DSORG=PO),
//   SPACE=(3120,(20,5,10))
//*
//* Replace {zowe.setup.dataset.prefix} with the
//* Value as seen in zowe.yaml
//*
//SYSPROC  DD DSN=TEST.DATASET.PFX.SZWEEXEC,DISP=SHR
//*
//* Replace {zowe.setup.dataset.prefix} with the
//* Value as seen in zowe.yaml
//*
//STEPLIB  DD DSN=TEST.DATASET.PFX.SZWELOAD,DISP=SHR
//ISPPLIB  DD DSN=ISP.SISPPENU,DISP=SHR
//ISPMLIB  DD DSN=ISP.SISPMENU,DISP=SHR
//ISPTLIB  DD DSN=ISP.SISPTENU,DISP=SHR
//ISPSLIB  DD DSN=ISP.SISPSENU,DISP=SHR
//ISPLOG   DD UNIT=SYSDA,SPACE=(CYL,(10,1,1),RLSE),
//   DCB=(RECFM=VA,LRECL=125,BLKSIZE=129)
//*
//* The order must be as follows.
//*
//* zowe-yaml-schema.json
//* server-common.json
//*
//* Replace {zowe.runtimeDirectory} with where your Zowe run time
//* directory is, as seen in zowe.yaml
//*
//MYSCHEMA DD   *,DLM=$$
FILE /test/dir/schemas/zowe-yaml-schema.json
FILE /test/dir/schemas/server-common.json
$$
//*
//* The DD below must include one or more FILE or PARMLIB
//* entries. The lower entries have their values
//* overridden by the higher entries.
//*
//* Note: Use backslash in MYCONFIG or MYSCHEMA as continuation char.
//*
//* Ex. PARMLIB MY.ZOWE.CUSTOM.PARMLIB(YAML)
//*     FILE /some/other/zowe.yaml
//*     FILE /long/path/to/another/configuration/\\
//*     zowe.yaml
//*
//MYCONFIG DD   *,DLM=$$
FILE /test/dir/zowe.test.yaml
$$
//CMGROUT  DD   SYSOUT=*
//SYSPRINT DD   SYSOUT=*
//SYSTSPRT DD   SYSOUT=*
//*
//* Change 'generate' to 'nogenerate' if you only
//* want to validate your configuration. The default
//* option, 'generate', will validate and then generate
//* jobs based on your configuration.
//*
//*   - generate
//*   - nogenerate
//*
//* Change 'noverbose' to 'verbose' below for
//* advanced logging. This is not needed unless
//* there is an error.
//*
//*   - verbose
//*   - noverbose
//*
//SYSTSIN  DD   *
ISPSTART CMD(%ZWEGEN00 -
generate -
noverbose -
)
--- End of JCL ---
Submitting Job ZWEGENER
Job ZWEGENER(JOB00000) completed with RC=0
Zowe JCL generated successfully
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEISTC) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEISTC)
--- JCL Content ---
//ZWEISTC JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is used to add proclib members
//* Used to start a Zowe "instance"
//* Instances represent a configuration of Zowe, different from the
//* "runtime" datasets that are created upon install of Zowe / SMPE.
//*
//* If you plan NOT to use Zowe Cross Memory Server, consider to
//* copy Zowe Launcher STC only (ZWESLSTC).
//*
//*********************************************************************
//*
//MCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//  SET PROCLIB=TEST.DATASET.PFX.TEST.PROCLIB
//STCZOWE DD DISP=SHR,
// DSN=&PROCLIB.(ZWESLSTC)
//STCZIS DD DISP=SHR,
// DSN=&PROCLIB.(ZWESISTC)
//STCAUX DD DISP=SHR,
// DSN=&PROCLIB.(ZWESASTC)
//*
//SYSTSIN DD *
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESLSTC)') +
OUTFILE(STCZOWE)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESISTC)') +
OUTFILE(STCZIS)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESASTC)') +
OUTFILE(STCAUX)
//*
--- End of JCL ---
Submitting Job ZWEISTC
Job ZWEISTC(JOB00000) completed with RC=0
>> Zowe main started tasks are installed successfully."
`;

exports[`init-stc (LONG) run stc setup, then overwrite, then run again 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> Install Zowe main started task
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEGENER)
--- JCL content ---
//ZWEGENER JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is responsible for generating other jobs required
//* to configure Zowe.
//*
//* The method of validating your configuration is using
//* JSON Schema <https://json-schema.org>. Zowe provides
//* the ConfigMgr to assist in this. This job will invoke
//* the ConfigMgr to validate your current configuration
//* before generating any jobs. If there are any values
//* that are incorrect, you will be notified. You should
//* fix the value and then run this job again. You can run
//* this job as many times as you need.
//*
//* Configmgr documentation:
//* https://docs.zowe.org/stable/user-guide/configmgr-using
//*
//* Note: Any string with braces has an associated yaml value
//*       in one of the yaml definitions for Zowe.
//*       You must find the value and substitute it.
//*
//*       {key} -> value
//*
//GENER    EXEC PGM=IKJEFT1B
//ISPPROF  DD   DSN=,DISP=(NEW,DELETE),UNIT=VIO,
//   DCB=(RECFM=FB,LRECL=80,BLKSIZE=3120,DSORG=PO),
//   SPACE=(3120,(20,5,10))
//*
//* Replace {zowe.setup.dataset.prefix} with the
//* Value as seen in zowe.yaml
//*
//SYSPROC  DD DSN=TEST.DATASET.PFX.SZWEEXEC,DISP=SHR
//*
//* Replace {zowe.setup.dataset.prefix} with the
//* Value as seen in zowe.yaml
//*
//STEPLIB  DD DSN=TEST.DATASET.PFX.SZWELOAD,DISP=SHR
//ISPPLIB  DD DSN=ISP.SISPPENU,DISP=SHR
//ISPMLIB  DD DSN=ISP.SISPMENU,DISP=SHR
//ISPTLIB  DD DSN=ISP.SISPTENU,DISP=SHR
//ISPSLIB  DD DSN=ISP.SISPSENU,DISP=SHR
//ISPLOG   DD UNIT=SYSDA,SPACE=(CYL,(10,1,1),RLSE),
//   DCB=(RECFM=VA,LRECL=125,BLKSIZE=129)
//*
//* The order must be as follows.
//*
//* zowe-yaml-schema.json
//* server-common.json
//*
//* Replace {zowe.runtimeDirectory} with where your Zowe run time
//* directory is, as seen in zowe.yaml
//*
//MYSCHEMA DD   *,DLM=$$
FILE /test/dir/schemas/zowe-yaml-schema.json
FILE /test/dir/schemas/server-common.json
$$
//*
//* The DD below must include one or more FILE or PARMLIB
//* entries. The lower entries have their values
//* overridden by the higher entries.
//*
//* Note: Use backslash in MYCONFIG or MYSCHEMA as continuation char.
//*
//* Ex. PARMLIB MY.ZOWE.CUSTOM.PARMLIB(YAML)
//*     FILE /some/other/zowe.yaml
//*     FILE /long/path/to/another/configuration/\\
//*     zowe.yaml
//*
//MYCONFIG DD   *,DLM=$$
FILE /test/dir/zowe.test.yaml
$$
//CMGROUT  DD   SYSOUT=*
//SYSPRINT DD   SYSOUT=*
//SYSTSPRT DD   SYSOUT=*
//*
//* Change 'generate' to 'nogenerate' if you only
//* want to validate your configuration. The default
//* option, 'generate', will validate and then generate
//* jobs based on your configuration.
//*
//*   - generate
//*   - nogenerate
//*
//* Change 'noverbose' to 'verbose' below for
//* advanced logging. This is not needed unless
//* there is an error.
//*
//*   - verbose
//*   - noverbose
//*
//SYSTSIN  DD   *
ISPSTART CMD(%ZWEGEN00 -
generate -
noverbose -
)
--- End of JCL ---
Submitting Job ZWEGENER
Job ZWEGENER(JOB00000) completed with RC=0
Zowe JCL generated successfully
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEISTC) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEISTC)
--- JCL Content ---
//ZWEISTC JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is used to add proclib members
//* Used to start a Zowe "instance"
//* Instances represent a configuration of Zowe, different from the
//* "runtime" datasets that are created upon install of Zowe / SMPE.
//*
//* If you plan NOT to use Zowe Cross Memory Server, consider to
//* copy Zowe Launcher STC only (ZWESLSTC).
//*
//*********************************************************************
//*
//MCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//  SET PROCLIB=TEST.DATASET.PFX.TEST.PROCLIB
//STCZOWE DD DISP=SHR,
// DSN=&PROCLIB.(ZWESLSTC)
//STCZIS DD DISP=SHR,
// DSN=&PROCLIB.(ZWESISTC)
//STCAUX DD DISP=SHR,
// DSN=&PROCLIB.(ZWESASTC)
//*
//SYSTSIN DD *
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESLSTC)') +
OUTFILE(STCZOWE)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESISTC)') +
OUTFILE(STCZIS)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESASTC)') +
OUTFILE(STCAUX)
//*
--- End of JCL ---
Submitting Job ZWEISTC
Job ZWEISTC(JOB00000) completed with RC=0
>> Zowe main started tasks are installed successfully."
`;

exports[`init-stc (LONG) run stc setup, then overwrite, then run again 2`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> Install Zowe main started task
Warning ZWEL0300W: TEST.DATASET.PFX.TEST.PROCLIB(ZWESLSTC) already exists. This data set member will be overwritten.
Warning ZWEL0300W: TEST.DATASET.PFX.TEST.PROCLIB(ZWESISTC) already exists. This data set member will be overwritten.
Warning ZWEL0300W: TEST.DATASET.PFX.TEST.PROCLIB(ZWESASTC) already exists. This data set member will be overwritten.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWERSTC) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWERSTC)
--- JCL Content ---
//ZWERSTC JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is used to remove proclib members
//* Used to start a Zowe "instance"
//* Instances represent a configuration of Zowe, different from the
//* "runtime" datasets that are created upon install of Zowe / SMPE.
//*
//*********************************************************************
//*
//*      * You do NOT need to change PROCLIB when running ZWEGENER.
//*      * This is used to keep some lines under the column limit.
//*
//       EXPORT SYMLIST=*
//*
//       SET PROCLIB=TEST.DATASET.PFX.TEST.PROCLIB
//*
//*********************************************************************
//RMPROC   EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *,SYMBOLS=JCLONLY
DELETE ('&PROCLIB.(ZWESLSTC)', +
        '&PROCLIB.(ZWESISTC)', +
        '&PROCLIB.(ZWESASTC)') +
       SCRATCH NONVSAM
//*
--- End of JCL ---
Submitting Job ZWERSTC
Job ZWERSTC(JOB00000) completed with RC=0
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEISTC) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEISTC)
--- JCL Content ---
//ZWEISTC JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is used to add proclib members
//* Used to start a Zowe "instance"
//* Instances represent a configuration of Zowe, different from the
//* "runtime" datasets that are created upon install of Zowe / SMPE.
//*
//* If you plan NOT to use Zowe Cross Memory Server, consider to
//* copy Zowe Launcher STC only (ZWESLSTC).
//*
//*********************************************************************
//*
//MCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//  SET PROCLIB=TEST.DATASET.PFX.TEST.PROCLIB
//STCZOWE DD DISP=SHR,
// DSN=&PROCLIB.(ZWESLSTC)
//STCZIS DD DISP=SHR,
// DSN=&PROCLIB.(ZWESISTC)
//STCAUX DD DISP=SHR,
// DSN=&PROCLIB.(ZWESASTC)
//*
//SYSTSIN DD *
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESLSTC)') +
OUTFILE(STCZOWE)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESISTC)') +
OUTFILE(STCZIS)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESASTC)') +
OUTFILE(STCAUX)
//*
--- End of JCL ---
Submitting Job ZWEISTC
Job ZWEISTC(JOB00000) completed with RC=0
>> Zowe main started tasks are installed successfully."
`;

exports[`init-stc (LONG) run stc setup, then overwrite, then run again 3`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> Install Zowe main started task
Warning ZWEL0301W: TEST.DATASET.PFX.TEST.PROCLIB(ZWESLSTC) already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
Warning ZWEL0301W: TEST.DATASET.PFX.TEST.PROCLIB(ZWESISTC) already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
Warning ZWEL0301W: TEST.DATASET.PFX.TEST.PROCLIB(ZWESASTC) already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
Skipped writing to TEST.DATASET.PFX.TEST.PROCLIB. To write, you must use --allow-overwrite."
`;

exports[`init-stc (LONG) run with proclib that doesn't exist 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> Install Zowe main started task
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEGENER)
--- JCL content ---
//ZWEGENER JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is responsible for generating other jobs required
//* to configure Zowe.
//*
//* The method of validating your configuration is using
//* JSON Schema <https://json-schema.org>. Zowe provides
//* the ConfigMgr to assist in this. This job will invoke
//* the ConfigMgr to validate your current configuration
//* before generating any jobs. If there are any values
//* that are incorrect, you will be notified. You should
//* fix the value and then run this job again. You can run
//* this job as many times as you need.
//*
//* Configmgr documentation:
//* https://docs.zowe.org/stable/user-guide/configmgr-using
//*
//* Note: Any string with braces has an associated yaml value
//*       in one of the yaml definitions for Zowe.
//*       You must find the value and substitute it.
//*
//*       {key} -> value
//*
//GENER    EXEC PGM=IKJEFT1B
//ISPPROF  DD   DSN=,DISP=(NEW,DELETE),UNIT=VIO,
//   DCB=(RECFM=FB,LRECL=80,BLKSIZE=3120,DSORG=PO),
//   SPACE=(3120,(20,5,10))
//*
//* Replace {zowe.setup.dataset.prefix} with the
//* Value as seen in zowe.yaml
//*
//SYSPROC  DD DSN=TEST.DATASET.PFX.SZWEEXEC,DISP=SHR
//*
//* Replace {zowe.setup.dataset.prefix} with the
//* Value as seen in zowe.yaml
//*
//STEPLIB  DD DSN=TEST.DATASET.PFX.SZWELOAD,DISP=SHR
//ISPPLIB  DD DSN=ISP.SISPPENU,DISP=SHR
//ISPMLIB  DD DSN=ISP.SISPMENU,DISP=SHR
//ISPTLIB  DD DSN=ISP.SISPTENU,DISP=SHR
//ISPSLIB  DD DSN=ISP.SISPSENU,DISP=SHR
//ISPLOG   DD UNIT=SYSDA,SPACE=(CYL,(10,1,1),RLSE),
//   DCB=(RECFM=VA,LRECL=125,BLKSIZE=129)
//*
//* The order must be as follows.
//*
//* zowe-yaml-schema.json
//* server-common.json
//*
//* Replace {zowe.runtimeDirectory} with where your Zowe run time
//* directory is, as seen in zowe.yaml
//*
//MYSCHEMA DD   *,DLM=$$
FILE /test/dir/schemas/zowe-yaml-schema.json
FILE /test/dir/schemas/server-common.json
$$
//*
//* The DD below must include one or more FILE or PARMLIB
//* entries. The lower entries have their values
//* overridden by the higher entries.
//*
//* Note: Use backslash in MYCONFIG or MYSCHEMA as continuation char.
//*
//* Ex. PARMLIB MY.ZOWE.CUSTOM.PARMLIB(YAML)
//*     FILE /some/other/zowe.yaml
//*     FILE /long/path/to/another/configuration/\\
//*     zowe.yaml
//*
//MYCONFIG DD   *,DLM=$$
FILE /test/dir/zowe.test.yaml
$$
//CMGROUT  DD   SYSOUT=*
//SYSPRINT DD   SYSOUT=*
//SYSTSPRT DD   SYSOUT=*
//*
//* Change 'generate' to 'nogenerate' if you only
//* want to validate your configuration. The default
//* option, 'generate', will validate and then generate
//* jobs based on your configuration.
//*
//*   - generate
//*   - nogenerate
//*
//* Change 'noverbose' to 'verbose' below for
//* advanced logging. This is not needed unless
//* there is an error.
//*
//*   - verbose
//*   - noverbose
//*
//SYSTSIN  DD   *
ISPSTART CMD(%ZWEGEN00 -
generate -
noverbose -
)
--- End of JCL ---
Submitting Job ZWEGENER
Job ZWEGENER(JOB00000) completed with RC=0
Zowe JCL generated successfully
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEISTC) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEISTC)
--- JCL Content ---
//ZWEISTC JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is used to add proclib members
//* Used to start a Zowe "instance"
//* Instances represent a configuration of Zowe, different from the
//* "runtime" datasets that are created upon install of Zowe / SMPE.
//*
//* If you plan NOT to use Zowe Cross Memory Server, consider to
//* copy Zowe Launcher STC only (ZWESLSTC).
//*
//*********************************************************************
//*
//MCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//  SET PROCLIB=DOES.NOT.EXIST
//STCZOWE DD DISP=SHR,
// DSN=&PROCLIB.(ZWESLSTC)
//STCZIS DD DISP=SHR,
// DSN=&PROCLIB.(ZWESISTC)
//STCAUX DD DISP=SHR,
// DSN=&PROCLIB.(ZWESASTC)
//*
//SYSTSIN DD *
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESLSTC)') +
OUTFILE(STCZOWE)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESISTC)') +
OUTFILE(STCZIS)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESASTC)') +
OUTFILE(STCAUX)
//*
--- End of JCL ---
Submitting Job ZWEISTC
ERROR: Error ZWEL0162E: Failed to find job JOB00000 result."
`;

exports[`init-stc (SHORT) aux stc exists 1`] = `
"-------------------------------------------------------------------------------
>> Install Zowe main started task
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Warning ZWEL0301W: TEST.DATASET.PFX.TEST.PROCLIB(ZWESASTC) already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
Skipped writing to TEST.DATASET.PFX.TEST.PROCLIB. To write, you must use --allow-overwrite."
`;

exports[`init-stc (SHORT) aux stc exists 2`] = `
"-------------------------------------------------------------------------------
>> Install Zowe main started task
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Warning ZWEL0300W: TEST.DATASET.PFX.TEST.PROCLIB(ZWESASTC) already exists. This data set member will be overwritten.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWERSTC) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWERSTC)
--- JCL Content ---
//ZWERSTC JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is used to remove proclib members
//* Used to start a Zowe "instance"
//* Instances represent a configuration of Zowe, different from the
//* "runtime" datasets that are created upon install of Zowe / SMPE.
//*
//*********************************************************************
//*
//*      * You do NOT need to change PROCLIB when running ZWEGENER.
//*      * This is used to keep some lines under the column limit.
//*
//       EXPORT SYMLIST=*
//*
//       SET PROCLIB=TEST.DATASET.PFX.TEST.PROCLIB
//*
//*********************************************************************
//RMPROC   EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *,SYMBOLS=JCLONLY
DELETE ('&PROCLIB.(ZWESLSTC)', +
        '&PROCLIB.(ZWESISTC)', +
        '&PROCLIB.(ZWESASTC)') +
       SCRATCH NONVSAM
//*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEISTC) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEISTC)
--- JCL Content ---
//ZWEISTC JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is used to add proclib members
//* Used to start a Zowe "instance"
//* Instances represent a configuration of Zowe, different from the
//* "runtime" datasets that are created upon install of Zowe / SMPE.
//*
//* If you plan NOT to use Zowe Cross Memory Server, consider to
//* copy Zowe Launcher STC only (ZWESLSTC).
//*
//*********************************************************************
//*
//MCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//  SET PROCLIB=TEST.DATASET.PFX.TEST.PROCLIB
//STCZOWE DD DISP=SHR,
// DSN=&PROCLIB.(ZWESLSTC)
//STCZIS DD DISP=SHR,
// DSN=&PROCLIB.(ZWESISTC)
//STCAUX DD DISP=SHR,
// DSN=&PROCLIB.(ZWESASTC)
//*
//SYSTSIN DD *
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESLSTC)') +
OUTFILE(STCZOWE)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESISTC)') +
OUTFILE(STCZIS)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESASTC)') +
OUTFILE(STCAUX)
//*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe main started tasks are installed successfully."
`;

exports[`init-stc (SHORT) invalid stc configurations 1`] = `
"-------------------------------------------------------------------------------
>> Install Zowe main started task
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEISTC) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEISTC)
--- JCL Content ---
//ZWEISTC JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is used to add proclib members
//* Used to start a Zowe "instance"
//* Instances represent a configuration of Zowe, different from the
//* "runtime" datasets that are created upon install of Zowe / SMPE.
//*
//* If you plan NOT to use Zowe Cross Memory Server, consider to
//* copy Zowe Launcher STC only (ZWESLSTC).
//*
//*********************************************************************
//*
//MCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//  SET PROCLIB=TEST.DATASET.PFX.TEST.PROCLIB
//STCZOWE DD DISP=SHR,
// DSN=&PROCLIB.(ZWESLSTC)
//STCZIS DD DISP=SHR,
// DSN=&PROCLIB.(ZWESISTC)
//STCAUX DD DISP=SHR,
// DSN=&PROCLIB.(ZWESASTC)
//*
//SYSTSIN DD *
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESLSTC)') +
OUTFILE(STCZOWE)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESISTC)') +
OUTFILE(STCZIS)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESASTC)') +
OUTFILE(STCAUX)
//*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe main started tasks are installed successfully."
`;

exports[`init-stc (SHORT) invalid stc configurations 2`] = `
"-------------------------------------------------------------------------------
>> Install Zowe main started task
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEISTC) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEISTC)
--- JCL Content ---
//ZWEISTC JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is used to add proclib members
//* Used to start a Zowe "instance"
//* Instances represent a configuration of Zowe, different from the
//* "runtime" datasets that are created upon install of Zowe / SMPE.
//*
//* If you plan NOT to use Zowe Cross Memory Server, consider to
//* copy Zowe Launcher STC only (ZWESLSTC).
//*
//*********************************************************************
//*
//MCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//  SET PROCLIB=TEST.DATASET.PFX.TEST.PROCLIB
//STCZOWE DD DISP=SHR,
// DSN=&PROCLIB.(ZWESLSTC)
//STCZIS DD DISP=SHR,
// DSN=&PROCLIB.(ZWESISTC)
//STCAUX DD DISP=SHR,
// DSN=&PROCLIB.(ZWESASTC)
//*
//SYSTSIN DD *
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESLSTC)') +
OUTFILE(STCZOWE)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESISTC)') +
OUTFILE(STCZIS)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESASTC)') +
OUTFILE(STCAUX)
//*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe main started tasks are installed successfully."
`;

exports[`init-stc (SHORT) invalid stc configurations 3`] = `
"Error ZWEL0326E: An error occurred while processing Zowe YAML config /test/dir/zowe.test.yaml:
    about to validate merged yamls as
    {
      "zowe": {
        "setup": {
          "jcl": {
            "enable": true,
            "header": ""
          },
          "dataset": {
            "prefix": "TEST.DATASET.PFX",
            "proclib": "TEST.DATASET.PFX.TEST.PROCLIB",
            "parmlib": "TEST.DATASET.PFX.PARMLIB",
            "parmlibMembers": {
              "zis": "ZWESIP00"
            },
            "jcllib": "TEST.DATASET.PFX.JCLLIB",
            "loadlib": "TEST.DATASET.PFX.SZWEEXEC",
            "authLoadlib": "TEST.DATASET.PFX.SZWEAUTH",
            "authPluginLib": "TEST.DATASET.PFX.ZWESAPL"
          },
          "certificate": {
            "type": "PKCS12",
            "pkcs12": {
              "directory": "/test/dir/pkcs12"
            }
          },
          "vsam": {
            "mode": "NONRLS",
            "volume": "TSTVOL",
            "storageClass": "",
            "name": "TEST.DATASET.PFX.VSAMTEST"
          },
          "security": {
            "stcs": {
              "aux": "TOOLONGTOO"
            }
          }
        },
        "runtimeDirectory": "/test/dir",
        "logDirectory": "/test/dir/logs",
        "workspaceDirectory": "/test/dir/workspace",
        "extensionDirectory": "/global/zowe/extensions",
        "configmgr": {
          "validation": "STRICT"
        },
        "job": {
          "name": "ZWE1SV",
          "prefix": "ZWE1"
        },
        "rbacProfileIdentifier": "1",
        "cookieIdentifier": "1",
        "externalDomains": [
          "example.com"
        ],
        "externalPort": 7554,
        "network": {
          "server": {
            "tls": {
              "attls": false,
              "minTls": "TLSv1.2",
              "maxTls": "TLSv1.3"
            }
          },
          "client": {
            "tls": {
              "attls": false
            }
          }
        },
        "sysMessageTrim": false,
        "sysMessages": [
          "ZWEL0021I",
          "ZWEL0018I",
          "ZWEL0006I",
          "ZWES1601I",
          "ZWEL0008I",
          "ZWEL0022I",
          "ZWEL0001I",
          "ZWEL0002I",
          "ZWEAM000I",
          "ZWED0031I",
          "ZWES1013I"
        ],
        "launchScript": {
          "logLevel": "info",
          "onComponentConfigureFail": "warn"
        },
        "certificate": {
          "keystore": {
            "type": "PKCS12",
            "file": "/global/zowe/keystore/localhost/localhost.keystore.p12",
            "password": "password",
            "alias": "localhost"
          },
          "truststore": {
            "type": "PKCS12",
            "file": "/global/zowe/keystore/localhost/localhost.truststore.p12",
            "password": "password"
          },
          "pem": {
            "key": "/global/zowe/keystore/localhost/localhost.key",
            "certificate": "/global/zowe/keystore/localhost/localhost.cer",
            "certificateAuthorities": "/global/zowe/keystore/local_ca/local_ca.cer"
          }
        },
        "verifyCertificates": "STRICT"
      },
      "java": {
        "home": "/test/java/home"
      },
      "zOSMF": {
        "host": "some.test.hostname",
        "port": 12321,
        "applId": "IZUDFLT"
      },
      "components": {
        "apiml": {
          "enabled": true
        },
        "gateway": {
          "enabled": true,
          "port": 7554,
          "debug": false,
          "apiml": {
            "security": {
              "auth": {
                "provider": "saf"
              },
              "authorization": {
                "endpoint": {
                  "enabled": false
                },
                "provider": "native"
              },
              "x509": {
                "enabled": false
              }
            }
          }
        },
        "zaas": {
          "enabled": true,
          "port": 7558,
          "debug": false
        },
        "api-catalog": {
          "enabled": true,
          "port": 7552,
          "debug": false
        },
        "discovery": {
          "enabled": true,
          "port": 7553,
          "debug": false
        },
        "caching-service": {
          "enabled": true,
          "port": 7555,
          "debug": false,
          "storage": {
            "evictionStrategy": "reject",
            "mode": "infinispan",
            "infinispan": {
              "jgroups": {
                "port": 7600,
                "keyExchange": {
                  "port": 7601
                }
              }
            }
          }
        },
        "app-server": {
          "enabled": true,
          "port": 7556,
          "debug": false
        },
        "zss": {
          "enabled": true,
          "port": 7557,
          "crossMemoryServerName": "ZWESIS_STD",
          "agent": {
            "64bit": true
          }
        },
        "explorer-jes": {
          "enabled": true
        },
        "explorer-mvs": {
          "enabled": true
        },
        "explorer-uss": {
          "enabled": true
        }
      }
    }
    validate status = 4
    Validity Exceptions:
    Validity Exceptions(s) with object at
      Validity Exceptions(s) with object at zowe
        Validity Exceptions(s) with object at zowe.setup
          Validity Exceptions(s) with object at zowe.setup.security
            Validity Exceptions(s) with object at zowe.setup.security.stcs
              Schema at 'zowe.setup.security.stcs.aux' invalid
                not oneOf schemas at 'zowe.setup.security.stcs.aux' are valid, 0 are
                  Validity Exceptions(s) with string at zowe.setup.security.stcs.aux
                    string too long (len=10) 'TOOLONGTOO' 10 > MAX=8 at zowe.setup.security.stcs.aux
                    string pattern match fail s='TOOLONGTOO', pat='^([A-Z\\$\\#\\@]){1}([A-Z0-9\\$\\#\\@]){0,7}$', at zowe.setup.security.stcs.aux
                  Validity Exceptions(s) with string at zowe.setup.security.stcs.aux
                    string too long (len=10) 'TOOLONGTOO' 10 > MAX=0 at zowe.setup.security.stcs.aux"
`;

exports[`init-stc (SHORT) invalid stc configurations 4`] = `
"Error ZWEL0326E: An error occurred while processing Zowe YAML config /test/dir/zowe.test.yaml:
    about to validate merged yamls as
    {
      "zowe": {
        "setup": {
          "jcl": {
            "enable": true,
            "header": ""
          },
          "dataset": {
            "prefix": "TEST.DATASET.PFX",
            "proclib": "TEST.DATASET.PFX.TEST.PROCLIB",
            "parmlib": "TEST.DATASET.PFX.PARMLIB",
            "parmlibMembers": {
              "zis": "ZWESIP00"
            },
            "jcllib": "TEST.DATASET.PFX.JCLLIB",
            "loadlib": "TEST.DATASET.PFX.SZWEEXEC",
            "authLoadlib": "TEST.DATASET.PFX.SZWEAUTH",
            "authPluginLib": "TEST.DATASET.PFX.ZWESAPL"
          },
          "certificate": {
            "type": "PKCS12",
            "pkcs12": {
              "directory": "/test/dir/pkcs12"
            }
          },
          "vsam": {
            "mode": "NONRLS",
            "volume": "TSTVOL",
            "storageClass": "",
            "name": "TEST.DATASET.PFX.VSAMTEST"
          },
          "security": {
            "stcs": {
              "aux": "TOOLONGTOO",
              "zis": null
            }
          }
        },
        "runtimeDirectory": "/test/dir",
        "logDirectory": "/test/dir/logs",
        "workspaceDirectory": "/test/dir/workspace",
        "extensionDirectory": "/global/zowe/extensions",
        "configmgr": {
          "validation": "STRICT"
        },
        "job": {
          "name": "ZWE1SV",
          "prefix": "ZWE1"
        },
        "rbacProfileIdentifier": "1",
        "cookieIdentifier": "1",
        "externalDomains": [
          "example.com"
        ],
        "externalPort": 7554,
        "network": {
          "server": {
            "tls": {
              "attls": false,
              "minTls": "TLSv1.2",
              "maxTls": "TLSv1.3"
            }
          },
          "client": {
            "tls": {
              "attls": false
            }
          }
        },
        "sysMessageTrim": false,
        "sysMessages": [
          "ZWEL0021I",
          "ZWEL0018I",
          "ZWEL0006I",
          "ZWES1601I",
          "ZWEL0008I",
          "ZWEL0022I",
          "ZWEL0001I",
          "ZWEL0002I",
          "ZWEAM000I",
          "ZWED0031I",
          "ZWES1013I"
        ],
        "launchScript": {
          "logLevel": "info",
          "onComponentConfigureFail": "warn"
        },
        "certificate": {
          "keystore": {
            "type": "PKCS12",
            "file": "/global/zowe/keystore/localhost/localhost.keystore.p12",
            "password": "password",
            "alias": "localhost"
          },
          "truststore": {
            "type": "PKCS12",
            "file": "/global/zowe/keystore/localhost/localhost.truststore.p12",
            "password": "password"
          },
          "pem": {
            "key": "/global/zowe/keystore/localhost/localhost.key",
            "certificate": "/global/zowe/keystore/localhost/localhost.cer",
            "certificateAuthorities": "/global/zowe/keystore/local_ca/local_ca.cer"
          }
        },
        "verifyCertificates": "STRICT"
      },
      "java": {
        "home": "/test/java/home"
      },
      "zOSMF": {
        "host": "some.test.hostname",
        "port": 12321,
        "applId": "IZUDFLT"
      },
      "components": {
        "apiml": {
          "enabled": true
        },
        "gateway": {
          "enabled": true,
          "port": 7554,
          "debug": false,
          "apiml": {
            "security": {
              "auth": {
                "provider": "saf"
              },
              "authorization": {
                "endpoint": {
                  "enabled": false
                },
                "provider": "native"
              },
              "x509": {
                "enabled": false
              }
            }
          }
        },
        "zaas": {
          "enabled": true,
          "port": 7558,
          "debug": false
        },
        "api-catalog": {
          "enabled": true,
          "port": 7552,
          "debug": false
        },
        "discovery": {
          "enabled": true,
          "port": 7553,
          "debug": false
        },
        "caching-service": {
          "enabled": true,
          "port": 7555,
          "debug": false,
          "storage": {
            "evictionStrategy": "reject",
            "mode": "infinispan",
            "infinispan": {
              "jgroups": {
                "port": 7600,
                "keyExchange": {
                  "port": 7601
                }
              }
            }
          }
        },
        "app-server": {
          "enabled": true,
          "port": 7556,
          "debug": false
        },
        "zss": {
          "enabled": true,
          "port": 7557,
          "crossMemoryServerName": "ZWESIS_STD",
          "agent": {
            "64bit": true
          }
        },
        "explorer-jes": {
          "enabled": true
        },
        "explorer-mvs": {
          "enabled": true
        },
        "explorer-uss": {
          "enabled": true
        }
      }
    }
    validate status = 4
    Validity Exceptions:
    Validity Exceptions(s) with object at
      Validity Exceptions(s) with object at zowe
        Validity Exceptions(s) with object at zowe.setup
          Validity Exceptions(s) with object at zowe.setup.security
            Validity Exceptions(s) with object at zowe.setup.security.stcs
              Schema at 'zowe.setup.security.stcs.aux' invalid
                not oneOf schemas at 'zowe.setup.security.stcs.aux' are valid, 0 are
                  Validity Exceptions(s) with string at zowe.setup.security.stcs.aux
                    string too long (len=10) 'TOOLONGTOO' 10 > MAX=8 at zowe.setup.security.stcs.aux
                    string pattern match fail s='TOOLONGTOO', pat='^([A-Z\\$\\#\\@]){1}([A-Z0-9\\$\\#\\@]){0,7}$', at zowe.setup.security.stcs.aux
                  Validity Exceptions(s) with string at zowe.setup.security.stcs.aux
                    string too long (len=10) 'TOOLONGTOO' 10 > MAX=0 at zowe.setup.security.stcs.aux"
`;

exports[`init-stc (SHORT) invalid stc configurations 5`] = `
"Error ZWEL0326E: An error occurred while processing Zowe YAML config /test/dir/zowe.test.yaml:
    about to validate merged yamls as
    {
      "zowe": {
        "setup": {
          "jcl": {
            "enable": true,
            "header": ""
          },
          "dataset": {
            "prefix": "TEST.DATASET.PFX",
            "proclib": "TEST.DATASET.PFX.TEST.PROCLIB",
            "parmlib": "TEST.DATASET.PFX.PARMLIB",
            "parmlibMembers": {
              "zis": "ZWESIP00"
            },
            "jcllib": "TEST.DATASET.PFX.JCLLIB",
            "loadlib": "TEST.DATASET.PFX.SZWEEXEC",
            "authLoadlib": "TEST.DATASET.PFX.SZWEAUTH",
            "authPluginLib": "TEST.DATASET.PFX.ZWESAPL"
          },
          "certificate": {
            "type": "PKCS12",
            "pkcs12": {
              "directory": "/test/dir/pkcs12"
            }
          },
          "vsam": {
            "mode": "NONRLS",
            "volume": "TSTVOL",
            "storageClass": "",
            "name": "TEST.DATASET.PFX.VSAMTEST"
          },
          "security": {
            "stcs": {
              "aux": "TOOLONGTOO",
              "zis": ""
            }
          }
        },
        "runtimeDirectory": "/test/dir",
        "logDirectory": "/test/dir/logs",
        "workspaceDirectory": "/test/dir/workspace",
        "extensionDirectory": "/global/zowe/extensions",
        "configmgr": {
          "validation": "STRICT"
        },
        "job": {
          "name": "ZWE1SV",
          "prefix": "ZWE1"
        },
        "rbacProfileIdentifier": "1",
        "cookieIdentifier": "1",
        "externalDomains": [
          "example.com"
        ],
        "externalPort": 7554,
        "network": {
          "server": {
            "tls": {
              "attls": false,
              "minTls": "TLSv1.2",
              "maxTls": "TLSv1.3"
            }
          },
          "client": {
            "tls": {
              "attls": false
            }
          }
        },
        "sysMessageTrim": false,
        "sysMessages": [
          "ZWEL0021I",
          "ZWEL0018I",
          "ZWEL0006I",
          "ZWES1601I",
          "ZWEL0008I",
          "ZWEL0022I",
          "ZWEL0001I",
          "ZWEL0002I",
          "ZWEAM000I",
          "ZWED0031I",
          "ZWES1013I"
        ],
        "launchScript": {
          "logLevel": "info",
          "onComponentConfigureFail": "warn"
        },
        "certificate": {
          "keystore": {
            "type": "PKCS12",
            "file": "/global/zowe/keystore/localhost/localhost.keystore.p12",
            "password": "password",
            "alias": "localhost"
          },
          "truststore": {
            "type": "PKCS12",
            "file": "/global/zowe/keystore/localhost/localhost.truststore.p12",
            "password": "password"
          },
          "pem": {
            "key": "/global/zowe/keystore/localhost/localhost.key",
            "certificate": "/global/zowe/keystore/localhost/localhost.cer",
            "certificateAuthorities": "/global/zowe/keystore/local_ca/local_ca.cer"
          }
        },
        "verifyCertificates": "STRICT"
      },
      "java": {
        "home": "/test/java/home"
      },
      "zOSMF": {
        "host": "some.test.hostname",
        "port": 12321,
        "applId": "IZUDFLT"
      },
      "components": {
        "apiml": {
          "enabled": true
        },
        "gateway": {
          "enabled": true,
          "port": 7554,
          "debug": false,
          "apiml": {
            "security": {
              "auth": {
                "provider": "saf"
              },
              "authorization": {
                "endpoint": {
                  "enabled": false
                },
                "provider": "native"
              },
              "x509": {
                "enabled": false
              }
            }
          }
        },
        "zaas": {
          "enabled": true,
          "port": 7558,
          "debug": false
        },
        "api-catalog": {
          "enabled": true,
          "port": 7552,
          "debug": false
        },
        "discovery": {
          "enabled": true,
          "port": 7553,
          "debug": false
        },
        "caching-service": {
          "enabled": true,
          "port": 7555,
          "debug": false,
          "storage": {
            "evictionStrategy": "reject",
            "mode": "infinispan",
            "infinispan": {
              "jgroups": {
                "port": 7600,
                "keyExchange": {
                  "port": 7601
                }
              }
            }
          }
        },
        "app-server": {
          "enabled": true,
          "port": 7556,
          "debug": false
        },
        "zss": {
          "enabled": true,
          "port": 7557,
          "crossMemoryServerName": "ZWESIS_STD",
          "agent": {
            "64bit": true
          }
        },
        "explorer-jes": {
          "enabled": true
        },
        "explorer-mvs": {
          "enabled": true
        },
        "explorer-uss": {
          "enabled": true
        }
      }
    }
    validate status = 4
    Validity Exceptions:
    Validity Exceptions(s) with object at
      Validity Exceptions(s) with object at zowe
        Validity Exceptions(s) with object at zowe.setup
          Validity Exceptions(s) with object at zowe.setup.security
            Validity Exceptions(s) with object at zowe.setup.security.stcs
              Schema at 'zowe.setup.security.stcs.aux' invalid
                not oneOf schemas at 'zowe.setup.security.stcs.aux' are valid, 0 are
                  Validity Exceptions(s) with string at zowe.setup.security.stcs.aux
                    string too long (len=10) 'TOOLONGTOO' 10 > MAX=8 at zowe.setup.security.stcs.aux
                    string pattern match fail s='TOOLONGTOO', pat='^([A-Z\\$\\#\\@]){1}([A-Z0-9\\$\\#\\@]){0,7}$', at zowe.setup.security.stcs.aux
                  Validity Exceptions(s) with string at zowe.setup.security.stcs.aux
                    string too long (len=10) 'TOOLONGTOO' 10 > MAX=0 at zowe.setup.security.stcs.aux"
`;

exports[`init-stc (SHORT) invalid stc configurations 6`] = `
"Error ZWEL0326E: An error occurred while processing Zowe YAML config /test/dir/zowe.test.yaml:
    about to validate merged yamls as
    {
      "zowe": {
        "setup": {
          "jcl": {
            "enable": true,
            "header": ""
          },
          "dataset": {
            "prefix": "TEST.DATASET.PFX",
            "proclib": "TEST.DATASET.PFX.TEST.PROCLIB",
            "parmlib": "TEST.DATASET.PFX.PARMLIB",
            "parmlibMembers": {
              "zis": "ZWESIP00"
            },
            "jcllib": "TEST.DATASET.PFX.JCLLIB",
            "loadlib": "TEST.DATASET.PFX.SZWEEXEC",
            "authLoadlib": "TEST.DATASET.PFX.SZWEAUTH",
            "authPluginLib": "TEST.DATASET.PFX.ZWESAPL"
          },
          "certificate": {
            "type": "PKCS12",
            "pkcs12": {
              "directory": "/test/dir/pkcs12"
            }
          },
          "vsam": {
            "mode": "NONRLS",
            "volume": "TSTVOL",
            "storageClass": "",
            "name": "TEST.DATASET.PFX.VSAMTEST"
          },
          "security": {
            "stcs": {
              "aux": "TOOLONGTOO",
              "zis": "",
              "zowe": null
            }
          }
        },
        "runtimeDirectory": "/test/dir",
        "logDirectory": "/test/dir/logs",
        "workspaceDirectory": "/test/dir/workspace",
        "extensionDirectory": "/global/zowe/extensions",
        "configmgr": {
          "validation": "STRICT"
        },
        "job": {
          "name": "ZWE1SV",
          "prefix": "ZWE1"
        },
        "rbacProfileIdentifier": "1",
        "cookieIdentifier": "1",
        "externalDomains": [
          "example.com"
        ],
        "externalPort": 7554,
        "network": {
          "server": {
            "tls": {
              "attls": false,
              "minTls": "TLSv1.2",
              "maxTls": "TLSv1.3"
            }
          },
          "client": {
            "tls": {
              "attls": false
            }
          }
        },
        "sysMessageTrim": false,
        "sysMessages": [
          "ZWEL0021I",
          "ZWEL0018I",
          "ZWEL0006I",
          "ZWES1601I",
          "ZWEL0008I",
          "ZWEL0022I",
          "ZWEL0001I",
          "ZWEL0002I",
          "ZWEAM000I",
          "ZWED0031I",
          "ZWES1013I"
        ],
        "launchScript": {
          "logLevel": "info",
          "onComponentConfigureFail": "warn"
        },
        "certificate": {
          "keystore": {
            "type": "PKCS12",
            "file": "/global/zowe/keystore/localhost/localhost.keystore.p12",
            "password": "password",
            "alias": "localhost"
          },
          "truststore": {
            "type": "PKCS12",
            "file": "/global/zowe/keystore/localhost/localhost.truststore.p12",
            "password": "password"
          },
          "pem": {
            "key": "/global/zowe/keystore/localhost/localhost.key",
            "certificate": "/global/zowe/keystore/localhost/localhost.cer",
            "certificateAuthorities": "/global/zowe/keystore/local_ca/local_ca.cer"
          }
        },
        "verifyCertificates": "STRICT"
      },
      "java": {
        "home": "/test/java/home"
      },
      "zOSMF": {
        "host": "some.test.hostname",
        "port": 12321,
        "applId": "IZUDFLT"
      },
      "components": {
        "apiml": {
          "enabled": true
        },
        "gateway": {
          "enabled": true,
          "port": 7554,
          "debug": false,
          "apiml": {
            "security": {
              "auth": {
                "provider": "saf"
              },
              "authorization": {
                "endpoint": {
                  "enabled": false
                },
                "provider": "native"
              },
              "x509": {
                "enabled": false
              }
            }
          }
        },
        "zaas": {
          "enabled": true,
          "port": 7558,
          "debug": false
        },
        "api-catalog": {
          "enabled": true,
          "port": 7552,
          "debug": false
        },
        "discovery": {
          "enabled": true,
          "port": 7553,
          "debug": false
        },
        "caching-service": {
          "enabled": true,
          "port": 7555,
          "debug": false,
          "storage": {
            "evictionStrategy": "reject",
            "mode": "infinispan",
            "infinispan": {
              "jgroups": {
                "port": 7600,
                "keyExchange": {
                  "port": 7601
                }
              }
            }
          }
        },
        "app-server": {
          "enabled": true,
          "port": 7556,
          "debug": false
        },
        "zss": {
          "enabled": true,
          "port": 7557,
          "crossMemoryServerName": "ZWESIS_STD",
          "agent": {
            "64bit": true
          }
        },
        "explorer-jes": {
          "enabled": true
        },
        "explorer-mvs": {
          "enabled": true
        },
        "explorer-uss": {
          "enabled": true
        }
      }
    }
    validate status = 4
    Validity Exceptions:
    Validity Exceptions(s) with object at
      Validity Exceptions(s) with object at zowe
        Validity Exceptions(s) with object at zowe.setup
          Validity Exceptions(s) with object at zowe.setup.security
            Validity Exceptions(s) with object at zowe.setup.security.stcs
              Schema at 'zowe.setup.security.stcs.aux' invalid
                not oneOf schemas at 'zowe.setup.security.stcs.aux' are valid, 0 are
                  Validity Exceptions(s) with string at zowe.setup.security.stcs.aux
                    string too long (len=10) 'TOOLONGTOO' 10 > MAX=8 at zowe.setup.security.stcs.aux
                    string pattern match fail s='TOOLONGTOO', pat='^([A-Z\\$\\#\\@]){1}([A-Z0-9\\$\\#\\@]){0,7}$', at zowe.setup.security.stcs.aux
                  Validity Exceptions(s) with string at zowe.setup.security.stcs.aux
                    string too long (len=10) 'TOOLONGTOO' 10 > MAX=0 at zowe.setup.security.stcs.aux"
`;

exports[`init-stc (SHORT) invalid stc configurations 7`] = `
"Error ZWEL0326E: An error occurred while processing Zowe YAML config /test/dir/zowe.test.yaml:
    about to validate merged yamls as
    {
      "zowe": {
        "setup": {
          "jcl": {
            "enable": true,
            "header": ""
          },
          "dataset": {
            "prefix": "TEST.DATASET.PFX",
            "proclib": "TEST.DATASET.PFX.TEST.PROCLIB",
            "parmlib": "TEST.DATASET.PFX.PARMLIB",
            "parmlibMembers": {
              "zis": "ZWESIP00"
            },
            "jcllib": "TEST.DATASET.PFX.JCLLIB",
            "loadlib": "TEST.DATASET.PFX.SZWEEXEC",
            "authLoadlib": "TEST.DATASET.PFX.SZWEAUTH",
            "authPluginLib": "TEST.DATASET.PFX.ZWESAPL"
          },
          "certificate": {
            "type": "PKCS12",
            "pkcs12": {
              "directory": "/test/dir/pkcs12"
            }
          },
          "vsam": {
            "mode": "NONRLS",
            "volume": "TSTVOL",
            "storageClass": "",
            "name": "TEST.DATASET.PFX.VSAMTEST"
          },
          "security": {
            "stcs": {
              "aux": "TOOLONGTOO",
              "zis": "",
              "zowe": ""
            }
          }
        },
        "runtimeDirectory": "/test/dir",
        "logDirectory": "/test/dir/logs",
        "workspaceDirectory": "/test/dir/workspace",
        "extensionDirectory": "/global/zowe/extensions",
        "configmgr": {
          "validation": "STRICT"
        },
        "job": {
          "name": "ZWE1SV",
          "prefix": "ZWE1"
        },
        "rbacProfileIdentifier": "1",
        "cookieIdentifier": "1",
        "externalDomains": [
          "example.com"
        ],
        "externalPort": 7554,
        "network": {
          "server": {
            "tls": {
              "attls": false,
              "minTls": "TLSv1.2",
              "maxTls": "TLSv1.3"
            }
          },
          "client": {
            "tls": {
              "attls": false
            }
          }
        },
        "sysMessageTrim": false,
        "sysMessages": [
          "ZWEL0021I",
          "ZWEL0018I",
          "ZWEL0006I",
          "ZWES1601I",
          "ZWEL0008I",
          "ZWEL0022I",
          "ZWEL0001I",
          "ZWEL0002I",
          "ZWEAM000I",
          "ZWED0031I",
          "ZWES1013I"
        ],
        "launchScript": {
          "logLevel": "info",
          "onComponentConfigureFail": "warn"
        },
        "certificate": {
          "keystore": {
            "type": "PKCS12",
            "file": "/global/zowe/keystore/localhost/localhost.keystore.p12",
            "password": "password",
            "alias": "localhost"
          },
          "truststore": {
            "type": "PKCS12",
            "file": "/global/zowe/keystore/localhost/localhost.truststore.p12",
            "password": "password"
          },
          "pem": {
            "key": "/global/zowe/keystore/localhost/localhost.key",
            "certificate": "/global/zowe/keystore/localhost/localhost.cer",
            "certificateAuthorities": "/global/zowe/keystore/local_ca/local_ca.cer"
          }
        },
        "verifyCertificates": "STRICT"
      },
      "java": {
        "home": "/test/java/home"
      },
      "zOSMF": {
        "host": "some.test.hostname",
        "port": 12321,
        "applId": "IZUDFLT"
      },
      "components": {
        "apiml": {
          "enabled": true
        },
        "gateway": {
          "enabled": true,
          "port": 7554,
          "debug": false,
          "apiml": {
            "security": {
              "auth": {
                "provider": "saf"
              },
              "authorization": {
                "endpoint": {
                  "enabled": false
                },
                "provider": "native"
              },
              "x509": {
                "enabled": false
              }
            }
          }
        },
        "zaas": {
          "enabled": true,
          "port": 7558,
          "debug": false
        },
        "api-catalog": {
          "enabled": true,
          "port": 7552,
          "debug": false
        },
        "discovery": {
          "enabled": true,
          "port": 7553,
          "debug": false
        },
        "caching-service": {
          "enabled": true,
          "port": 7555,
          "debug": false,
          "storage": {
            "evictionStrategy": "reject",
            "mode": "infinispan",
            "infinispan": {
              "jgroups": {
                "port": 7600,
                "keyExchange": {
                  "port": 7601
                }
              }
            }
          }
        },
        "app-server": {
          "enabled": true,
          "port": 7556,
          "debug": false
        },
        "zss": {
          "enabled": true,
          "port": 7557,
          "crossMemoryServerName": "ZWESIS_STD",
          "agent": {
            "64bit": true
          }
        },
        "explorer-jes": {
          "enabled": true
        },
        "explorer-mvs": {
          "enabled": true
        },
        "explorer-uss": {
          "enabled": true
        }
      }
    }
    validate status = 4
    Validity Exceptions:
    Validity Exceptions(s) with object at
      Validity Exceptions(s) with object at zowe
        Validity Exceptions(s) with object at zowe.setup
          Validity Exceptions(s) with object at zowe.setup.security
            Validity Exceptions(s) with object at zowe.setup.security.stcs
              Schema at 'zowe.setup.security.stcs.aux' invalid
                not oneOf schemas at 'zowe.setup.security.stcs.aux' are valid, 0 are
                  Validity Exceptions(s) with string at zowe.setup.security.stcs.aux
                    string too long (len=10) 'TOOLONGTOO' 10 > MAX=8 at zowe.setup.security.stcs.aux
                    string pattern match fail s='TOOLONGTOO', pat='^([A-Z\\$\\#\\@]){1}([A-Z0-9\\$\\#\\@]){0,7}$', at zowe.setup.security.stcs.aux
                  Validity Exceptions(s) with string at zowe.setup.security.stcs.aux
                    string too long (len=10) 'TOOLONGTOO' 10 > MAX=0 at zowe.setup.security.stcs.aux"
`;

exports[`init-stc (SHORT) valid config empty proclib 1`] = `
"-------------------------------------------------------------------------------
>> Install Zowe main started task
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEISTC) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEISTC)
--- JCL Content ---
//ZWEISTC JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is used to add proclib members
//* Used to start a Zowe "instance"
//* Instances represent a configuration of Zowe, different from the
//* "runtime" datasets that are created upon install of Zowe / SMPE.
//*
//* If you plan NOT to use Zowe Cross Memory Server, consider to
//* copy Zowe Launcher STC only (ZWESLSTC).
//*
//*********************************************************************
//*
//MCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//  SET PROCLIB=TEST.DATASET.PFX.TEST.PROCLIB
//STCZOWE DD DISP=SHR,
// DSN=&PROCLIB.(ZWESLSTC)
//STCZIS DD DISP=SHR,
// DSN=&PROCLIB.(ZWESISTC)
//STCAUX DD DISP=SHR,
// DSN=&PROCLIB.(ZWESASTC)
//*
//SYSTSIN DD *
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESLSTC)') +
OUTFILE(STCZOWE)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESISTC)') +
OUTFILE(STCZIS)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESASTC)') +
OUTFILE(STCAUX)
//*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe main started tasks are installed successfully."
`;

exports[`init-stc (SHORT) wrong ds prefix 1`] = `
"-------------------------------------------------------------------------------
>> Install Zowe main started task
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: Zowe dataset prefix (zowe.setup.dataset.prefix) is not defined in Zowe YAML configuration file."
`;

exports[`init-stc (SHORT) wrong ds prefix 2`] = `
"-------------------------------------------------------------------------------
>> Install Zowe main started task
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: Zowe dataset prefix (zowe.setup.dataset.prefix) is not defined in Zowe YAML configuration file."
`;

exports[`init-stc (SHORT) wrong jcllib 1`] = `
"-------------------------------------------------------------------------------
>> Install Zowe main started task
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0319E: zowe.setup.dataset.jcllib does not exist, cannot run. Run 'zwe init', 'zwe init generate', or submit JCL TEST.DATASET.PFX.SZWESAMP(ZWEGENER) before running this command."
`;

exports[`init-stc (SHORT) wrong jcllib 2`] = `
"-------------------------------------------------------------------------------
>> Install Zowe main started task
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0319E: zowe.setup.dataset.jcllib does not exist, cannot run. Run 'zwe init', 'zwe init generate', or submit JCL TEST.DATASET.PFX.SZWESAMP(ZWEGENER) before running this command."
`;

exports[`init-stc (SHORT) wrong proclib 1`] = `
"-------------------------------------------------------------------------------
>> Install Zowe main started task
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: PROCLIB (zowe.setup.dataset.proclib) is not defined in Zowe YAML configuration file."
`;

exports[`init-stc (SHORT) wrong proclib 2`] = `
"-------------------------------------------------------------------------------
>> Install Zowe main started task
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: PROCLIB (zowe.setup.dataset.proclib) is not defined in Zowe YAML configuration file."
`;

exports[`init-stc (SHORT) wrong proclib 3`] = `
"Error ZWEL0326E: An error occurred while processing Zowe YAML config /test/dir/zowe.test.yaml:
    about to validate merged yamls as
    {
      "zowe": {
        "setup": {
          "jcl": {
            "enable": true,
            "header": ""
          },
          "dataset": {
            "prefix": "TEST.DATASET.PFX",
            "proclib": "INVALID.PROCLIB.DEFINITION1",
            "parmlib": "TEST.DATASET.PFX.PARMLIB",
            "parmlibMembers": {
              "zis": "ZWESIP00"
            },
            "jcllib": "TEST.DATASET.PFX.JCLLIB",
            "loadlib": "TEST.DATASET.PFX.SZWEEXEC",
            "authLoadlib": "TEST.DATASET.PFX.SZWEAUTH",
            "authPluginLib": "TEST.DATASET.PFX.ZWESAPL"
          },
          "certificate": {
            "type": "PKCS12",
            "pkcs12": {
              "directory": "/test/dir/pkcs12"
            }
          },
          "vsam": {
            "mode": "NONRLS",
            "volume": "TSTVOL",
            "storageClass": "",
            "name": "TEST.DATASET.PFX.VSAMTEST"
          },
          "security": {
            "stcs": {
            }
          }
        },
        "runtimeDirectory": "/test/dir",
        "logDirectory": "/test/dir/logs",
        "workspaceDirectory": "/test/dir/workspace",
        "extensionDirectory": "/global/zowe/extensions",
        "configmgr": {
          "validation": "STRICT"
        },
        "job": {
          "name": "ZWE1SV",
          "prefix": "ZWE1"
        },
        "rbacProfileIdentifier": "1",
        "cookieIdentifier": "1",
        "externalDomains": [
          "example.com"
        ],
        "externalPort": 7554,
        "network": {
          "server": {
            "tls": {
              "attls": false,
              "minTls": "TLSv1.2",
              "maxTls": "TLSv1.3"
            }
          },
          "client": {
            "tls": {
              "attls": false
            }
          }
        },
        "sysMessageTrim": false,
        "sysMessages": [
          "ZWEL0021I",
          "ZWEL0018I",
          "ZWEL0006I",
          "ZWES1601I",
          "ZWEL0008I",
          "ZWEL0022I",
          "ZWEL0001I",
          "ZWEL0002I",
          "ZWEAM000I",
          "ZWED0031I",
          "ZWES1013I"
        ],
        "launchScript": {
          "logLevel": "info",
          "onComponentConfigureFail": "warn"
        },
        "certificate": {
          "keystore": {
            "type": "PKCS12",
            "file": "/global/zowe/keystore/localhost/localhost.keystore.p12",
            "password": "password",
            "alias": "localhost"
          },
          "truststore": {
            "type": "PKCS12",
            "file": "/global/zowe/keystore/localhost/localhost.truststore.p12",
            "password": "password"
          },
          "pem": {
            "key": "/global/zowe/keystore/localhost/localhost.key",
            "certificate": "/global/zowe/keystore/localhost/localhost.cer",
            "certificateAuthorities": "/global/zowe/keystore/local_ca/local_ca.cer"
          }
        },
        "verifyCertificates": "STRICT"
      },
      "java": {
        "home": "/test/java/home"
      },
      "zOSMF": {
        "host": "some.test.hostname",
        "port": 12321,
        "applId": "IZUDFLT"
      },
      "components": {
        "apiml": {
          "enabled": true
        },
        "gateway": {
          "enabled": true,
          "port": 7554,
          "debug": false,
          "apiml": {
            "security": {
              "auth": {
                "provider": "saf"
              },
              "authorization": {
                "endpoint": {
                  "enabled": false
                },
                "provider": "native"
              },
              "x509": {
                "enabled": false
              }
            }
          }
        },
        "zaas": {
          "enabled": true,
          "port": 7558,
          "debug": false
        },
        "api-catalog": {
          "enabled": true,
          "port": 7552,
          "debug": false
        },
        "discovery": {
          "enabled": true,
          "port": 7553,
          "debug": false
        },
        "caching-service": {
          "enabled": true,
          "port": 7555,
          "debug": false,
          "storage": {
            "evictionStrategy": "reject",
            "mode": "infinispan",
            "infinispan": {
              "jgroups": {
                "port": 7600,
                "keyExchange": {
                  "port": 7601
                }
              }
            }
          }
        },
        "app-server": {
          "enabled": true,
          "port": 7556,
          "debug": false
        },
        "zss": {
          "enabled": true,
          "port": 7557,
          "crossMemoryServerName": "ZWESIS_STD",
          "agent": {
            "64bit": true
          }
        },
        "explorer-jes": {
          "enabled": true
        },
        "explorer-mvs": {
          "enabled": true
        },
        "explorer-uss": {
          "enabled": true
        }
      }
    }
    validate status = 4
    Validity Exceptions:
    Validity Exceptions(s) with object at
      Validity Exceptions(s) with object at zowe
        Validity Exceptions(s) with object at zowe.setup
          Validity Exceptions(s) with object at zowe.setup.dataset
            Schema at 'zowe.setup.dataset.proclib' invalid
              not oneOf schemas at 'zowe.setup.dataset.proclib' are valid, 0 are
                Validity Exceptions(s) with string at zowe.setup.dataset.proclib
                  string pattern match fail s='INVALID.PROCLIB.DEFINITION1', pat='^([A-Z\\$\\#\\@]){1}([A-Z0-9\\$\\#\\@\\-]){0,7}(\\.([A-Z\\$\\#\\@]){1}([A-Z0-9\\$\\#\\@\\-]){0,7}){0,11}$', at zowe.setup.dataset.proclib
                Validity Exceptions(s) with string at zowe.setup.dataset.proclib
                  string too long (len=27) 'INVALID.PROCLIB.DEFINITION1' 27 > MAX=0 at zowe.setup.dataset.proclib"
`;

exports[`init-stc (SHORT) zis stc exists 1`] = `
"-------------------------------------------------------------------------------
>> Install Zowe main started task
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Warning ZWEL0301W: TEST.DATASET.PFX.TEST.PROCLIB(ZWESISTC) already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
Skipped writing to TEST.DATASET.PFX.TEST.PROCLIB. To write, you must use --allow-overwrite."
`;

exports[`init-stc (SHORT) zis stc exists 2`] = `
"-------------------------------------------------------------------------------
>> Install Zowe main started task
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Warning ZWEL0300W: TEST.DATASET.PFX.TEST.PROCLIB(ZWESISTC) already exists. This data set member will be overwritten.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWERSTC) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWERSTC)
--- JCL Content ---
//ZWERSTC JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is used to remove proclib members
//* Used to start a Zowe "instance"
//* Instances represent a configuration of Zowe, different from the
//* "runtime" datasets that are created upon install of Zowe / SMPE.
//*
//*********************************************************************
//*
//*      * You do NOT need to change PROCLIB when running ZWEGENER.
//*      * This is used to keep some lines under the column limit.
//*
//       EXPORT SYMLIST=*
//*
//       SET PROCLIB=TEST.DATASET.PFX.TEST.PROCLIB
//*
//*********************************************************************
//RMPROC   EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *,SYMBOLS=JCLONLY
DELETE ('&PROCLIB.(ZWESLSTC)', +
        '&PROCLIB.(ZWESISTC)', +
        '&PROCLIB.(ZWESASTC)') +
       SCRATCH NONVSAM
//*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEISTC) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEISTC)
--- JCL Content ---
//ZWEISTC JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is used to add proclib members
//* Used to start a Zowe "instance"
//* Instances represent a configuration of Zowe, different from the
//* "runtime" datasets that are created upon install of Zowe / SMPE.
//*
//* If you plan NOT to use Zowe Cross Memory Server, consider to
//* copy Zowe Launcher STC only (ZWESLSTC).
//*
//*********************************************************************
//*
//MCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//  SET PROCLIB=TEST.DATASET.PFX.TEST.PROCLIB
//STCZOWE DD DISP=SHR,
// DSN=&PROCLIB.(ZWESLSTC)
//STCZIS DD DISP=SHR,
// DSN=&PROCLIB.(ZWESISTC)
//STCAUX DD DISP=SHR,
// DSN=&PROCLIB.(ZWESASTC)
//*
//SYSTSIN DD *
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESLSTC)') +
OUTFILE(STCZOWE)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESISTC)') +
OUTFILE(STCZIS)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESASTC)') +
OUTFILE(STCAUX)
//*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe main started tasks are installed successfully."
`;

exports[`init-stc (SHORT) zos stc exists 1`] = `
"-------------------------------------------------------------------------------
>> Install Zowe main started task
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Warning ZWEL0301W: TEST.DATASET.PFX.TEST.PROCLIB(ZWESLSTC) already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
Skipped writing to TEST.DATASET.PFX.TEST.PROCLIB. To write, you must use --allow-overwrite."
`;

exports[`init-stc (SHORT) zos stc exists 2`] = `
"-------------------------------------------------------------------------------
>> Install Zowe main started task
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Warning ZWEL0300W: TEST.DATASET.PFX.TEST.PROCLIB(ZWESLSTC) already exists. This data set member will be overwritten.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWERSTC) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWERSTC)
--- JCL Content ---
//ZWERSTC JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is used to remove proclib members
//* Used to start a Zowe "instance"
//* Instances represent a configuration of Zowe, different from the
//* "runtime" datasets that are created upon install of Zowe / SMPE.
//*
//*********************************************************************
//*
//*      * You do NOT need to change PROCLIB when running ZWEGENER.
//*      * This is used to keep some lines under the column limit.
//*
//       EXPORT SYMLIST=*
//*
//       SET PROCLIB=TEST.DATASET.PFX.TEST.PROCLIB
//*
//*********************************************************************
//RMPROC   EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *,SYMBOLS=JCLONLY
DELETE ('&PROCLIB.(ZWESLSTC)', +
        '&PROCLIB.(ZWESISTC)', +
        '&PROCLIB.(ZWESASTC)') +
       SCRATCH NONVSAM
//*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEISTC) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEISTC)
--- JCL Content ---
//ZWEISTC JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is used to add proclib members
//* Used to start a Zowe "instance"
//* Instances represent a configuration of Zowe, different from the
//* "runtime" datasets that are created upon install of Zowe / SMPE.
//*
//* If you plan NOT to use Zowe Cross Memory Server, consider to
//* copy Zowe Launcher STC only (ZWESLSTC).
//*
//*********************************************************************
//*
//MCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//  SET PROCLIB=TEST.DATASET.PFX.TEST.PROCLIB
//STCZOWE DD DISP=SHR,
// DSN=&PROCLIB.(ZWESLSTC)
//STCZIS DD DISP=SHR,
// DSN=&PROCLIB.(ZWESISTC)
//STCAUX DD DISP=SHR,
// DSN=&PROCLIB.(ZWESASTC)
//*
//SYSTSIN DD *
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESLSTC)') +
OUTFILE(STCZOWE)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESISTC)') +
OUTFILE(STCZIS)
REPRO +
INDATASET('TEST.DATASET.PFX.JCLLIB(ZWESASTC)') +
OUTFILE(STCAUX)
//*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe main started tasks are installed successfully."
`;
